renamed api folders using singular names added edit/new entity page with exit prompt if data not saved renamed modules entitytype and entity using plural improved translate.js (now can translate also single elements) using buttons for scanzytable for retry (instead of simple link) added param array check

--- a/res/locales/it-IT.json
+++ b/res/locales/it-IT.json
@@ -2,6 +2,10 @@
     "Username:" : "Nome utente:",
     "Password:" : "Password:",
     "Login" : "Accedi",
-    "Wrong username or password" : "Nome utente o password non corretti"
-
+    "Wrong username or password" : "Nome utente o password non corretti",
+    "Edit" : "Modifica",
+    "Delete" : "Elimina",
+    "Save" : "Salva",
+    "Saving..." : "Salvataggio...",
+    "Cancel" : "Annulla"
 }
