improved edit entity page empty/unique check in front end added alphanum jquery plugin added init class for static variables values support for scroll

--- a/res/locales/it-IT.json
+++ b/res/locales/it-IT.json
@@ -7,5 +7,6 @@
     "Delete" : "Elimina",
     "Save" : "Salva",
     "Saving..." : "Salvataggio...",
-    "Cancel" : "Annulla"
+    "Cancel" : "Annulla",
+    "This field can't be empty" : "Questo campo non puo' essere vuoto"
 }
