--- a/res/locales/it-IT.json
+++ b/res/locales/it-IT.json
@@ -8,5 +8,6 @@
     "Save" : "Salva",
     "Saving..." : "Salvataggio...",
     "Cancel" : "Annulla",
+    "Are you sure you really want to delete": "Sei veramente sicuro di voler eliminare",
     "This field can't be empty" : "Questo campo non puo' essere vuoto"
 }
