minor improvements (front end effects/bugfixes) added fade animations for titles, topbar, scanzytable, scanzyload removed not ready pages (help, edit entity type) fixed margin under boostrap rows added confirm options (buttons/title) improved loading in links page changed title in links page added footer always at bottom of page

--- a/res/locales/it-IT.json
+++ b/res/locales/it-IT.json
@@ -9,5 +9,7 @@
     "Saving..." : "Salvataggio...",
     "Cancel" : "Annulla",
     "Are you sure you really want to delete": "Sei veramente sicuro di voler eliminare",
-    "This field can't be empty" : "Questo campo non puo' essere vuoto"
+    "from": "da",
+    "Warning!": "Attenzione!",
+    "Yes, delete": "Sì, elimina"
 }
