added back button for mobile minor bugfixes in css, js

--- a/res/locales/it-IT.json
+++ b/res/locales/it-IT.json
@@ -11,5 +11,6 @@
     "Are you sure you really want to delete": "Sei veramente sicuro di voler eliminare",
     "from": "da",
     "Warning!": "Attenzione!",
-    "Yes, delete": "Sì, elimina"
+    "Yes, delete": "Sì, elimina",
+    "Loading data...": "Caricamento dati..."
 }
