removed small title login and admin

--- a/res/locales/it-IT.json
+++ b/res/locales/it-IT.json
@@ -5,6 +5,7 @@
     "Wrong username or password" : "Nome utente o password non corretti",
     "Edit" : "Modifica",
     "Delete" : "Elimina",
+    "Dashboard" : "Panoramica",
     "Save" : "Salva",
     "Saving..." : "Salvataggio...",
     "Cancel" : "Annulla",
