added errorcheck, error page redirect disable error redirect with param devmode=on

--- a/res/locales/it-IT.json
+++ b/res/locales/it-IT.json
@@ -3,6 +3,9 @@
     "Password:" : "Password:",
     "Login" : "Accedi",
     "Logout": "Esci",
+    "Error": "Errore",
+    "An error occurred" : "Si e' verificato un errore",
+    "Probably something went wrong": "probabilmente qualcosa è andato storto",
     "Wrong username or password" : "Nome utente o password non corretti",
     "Edit" : "Modifica",
     "Delete" : "Elimina",
