added error popup instead of error page moved send error to server functionality to popup improved modal.js with more options added translations (IT) for error popup

--- a/res/locales/it-IT.json
+++ b/res/locales/it-IT.json
@@ -5,8 +5,13 @@
     "Logout": "Esci",
     "Error": "Errore",
     "An error occurred" : "Si e' verificato un errore",
-    "Probably something went wrong": "probabilmente qualcosa è andato storto",
+    "Probably something went wrong.": "Probabilmente qualcosa è andato storto.",
     "Wrong username or password" : "Nome utente o password non corretti",
+    "If the problem persists try logging in again": "Se il problema persiste provare ad effettuare nuovamente l'accesso",
+    "Close": "Chiudi",
+    "Login again": "Rieffettua l'accesso",
+    "Continue": "Continua",
+    "If you choose to continue anyway you could loose your data.": "Se si sceglie di continuare alcuni dati potrebbero essere danneggiati o eliminati.",
     "Edit" : "Modifica",
     "Delete" : "Elimina",
     "Dashboard" : "Panoramica",
